chore: fixing blockquote padding on mobile

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -383,7 +383,7 @@ footer {
 
   .content {
     blockquote {
-      margin-inline-start: 1rem;
+      margin-inline-start: 0;
       padding-left: 0.5rem;
     }
   }
